# pipeline-indicadores-bcb

./: README.md  pyproject.toml
.github/workflows/: ci.yml  refresh-data.yml
dashboard/: README.md  package-lock.json  package.json
dashboard/public/data/: cambio.json  mensal.json  selic.json  stats.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AboutSection.tsx  AnimatedNumber.tsx  ArchitectureSection.tsx  Calculator.tsx  CambioSection.tsx  DataTable.tsx  InsightsPanel.tsx  Reveal.tsx  StatTile.tsx  icons.tsx
dashboard/src/lib/: data.ts  devlog.ts  finance.ts  insights.ts  methodology.ts
data/bronze/cambio/: part-00000-12e02864-7ea0-4516-9e5a-5afb0e3d09b5-c000.snappy.parquet  part-00000-946184ac-f8c2-440b-b807-2591ea44ac35-c000.snappy.parquet  part-00000-aecfeaea-ec95-4ac0-b833-5e786e2d523f-c000.snappy.parquet
data/bronze/ipca/: part-00000-404fc901-396f-451c-8a37-adb4c725cdb8-c000.snappy.parquet  part-00000-7c311b12-861e-4cdb-b99c-e9531a565687-c000.snappy.parquet  part-00000-fc12e162-cd8c-44d0-858c-2b6bb099e1df-c000.snappy.parquet
data/bronze/selic/: part-00000-41da1fdc-0089-4ed6-8135-2aab7a57c55c-c000.snappy.parquet  part-00000-4a3e83b7-ccde-47ab-9307-2113fb7dc364-c000.snappy.parquet  part-00000-4ed7fc1c-aa78-4d83-b961-900440e6c338-c000.snappy.parquet
data/silver/indicadores/: part-00000-8250c1b5-11cc-4d07-8f76-057263f58141-c000.snappy.parquet  (+2 more)
src/bcb_pipeline/: bronze.py  config.py  export_json.py  extract.py  gold.py  run_pipeline.py  silver.py  storage.py
tests/: test_extract.py  test_gold.py  test_silver.py
(+9 files in other folders)
